[package]
name = "pressurize"
version = "0.0.1"
authors = ["Paweł Chojnacki <pawel.chcki@gmail.com>"]
edition = "2018"
description = "Tools for benchmarking environments"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = []

[dependencies]
log = "0.4"
perf-event-open-sys = "1.0"
memmap = "0.7"
anyhow = "1.0"
ctrlc = "3.1"
bcc = "0.0.31"
dogstatsd = "0.6"
clap = "2.33.3"
